--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:11.0.2'
     implementation 'com.google.firebase:firebase-storage:11.0.2'
     implementation 'com.google.firebase:firebase-auth:11.0.2'
+    implementation 'com.google.android.material:material:1.1.0-alpha10'
     implementation 'com.firebaseui:firebase-ui-database:2.1.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.1'
 }
