--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".BikeBooked"></activity>
         <activity
             android:name=".loginview"
             android:label="@string/title_activity_home_activity"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity android:name=".SupportActivity">
-        </activity>
-        <activity android:name=".DetailBikeInfo">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".SupportActivity"></activity>
+        <activity android:name=".DetailBikeInfo"></activity>
         <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,11 +25,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MyProfile">
-
-        </activity>
-        <activity android:name=".BookBike">
-        </activity>
+        <activity android:name=".MyProfile"></activity>
+        <activity android:name=".BookBike"></activity>
     </application>
 
 </manifest>
